--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "ejs": "^2.6.2",
         "express": "^4.17.1",
         "mongodb": "^3.3.0",
-        "mongoose": "^5.6.9"
+        "mongoose": "^5.6.9",
+        "node-static": "^0.7.11"
     }
 }
